syntax = "proto3";
package quickMining;

message PlayerPrefs {
  optional QuickMiningMode mode = 1;
  Coverage coverage = 2;
}

enum QuickMiningMode {
  WhenSneaking   = 0;
  UnlessSneaking = 1;
  AlwaysEnabled  = 2;
  AlwaysDisabled = 3;
}

message Coverage {
  optional bool enableMiningCrystals = 1;
  optional bool enableMiningGlowstoneLike = 2;
  optional bool enableMiningIceLike = 3;
  optional bool enableMiningLeaves = 4;
  optional bool enableMiningLogs = 5;
  optional bool enableMiningMushrooms = 6;
  optional bool enableMiningOres = 7;
  optional bool enableMiningPlants = 8;
  optional bool enableMiningSculkFamily = 9;
  optional bool enableMiningWartBlocks = 10;
}
